--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,10 @@ body{
     justify-content: center;
     align-items: center;
 }
+
+.video-full{
+    height: 100vh;
+    object-fit: cover;
+    position: fixed;
+    bottom:0
+}
