--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,25 @@ body{
     position: fixed;
     bottom:0
 }
+
+.canvas{
+    position: absolute !important;
+    top: 0px;
+    left: 0px;
+    width: 100vw;
+    height: 100vh;
+}
+
+.container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    gap: 10px;
+    grid-template-columns: 1fr 300px;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-areas:
+      'main top'
+      'main middle'
+      'main bottom';
+  }
